svc-switch/live-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: live-service
  annotations:
  labels:
    app: live
spec:
  selector:
    app: blue-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
  externalTrafficPolicy: Cluster
