svc-switch/stage-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: stage-service
  annotations:
  labels:
    app: stage
spec:
  selector:
    app: green-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
  externalTrafficPolicy: Cluster
